fix: [CDS-81554]: wrap execution note behind isPrivateAccess (#18404)

--- a/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionHeader/ExecutionHeader.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionHeader/ExecutionHeader.module.scss
@@ -111,4 +111,7 @@
       stroke: var(--primary-7) !important;
     }
   }
+  :global(.bp3-button-text) {
+    font-size: var(--font-size-small);
+  }
 }
